[gd_scene load_steps=9 format=3 uid="uid://4gkiha61d4o2"]

[ext_resource type="Texture2D" uid="uid://42pufu1mh3j8" path="res://icon.svg" id="1_2ua6k"]
[ext_resource type="Script" uid="uid://86g8ch4q18ab" path="res://prefabs/prototype/anim_player/node_2d_anim_test.gd" id="1_op7l8"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_op7l8"]
graph_offset = Vector2(-248, -13)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gspp1"]
animation = &"test"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_op7l8"]
states/BlendTree/node = SubResource("AnimationNodeBlendTree_op7l8")
states/BlendTree/position = Vector2(296, 142)
states/test/node = SubResource("AnimationNodeAnimation_gspp1")
states/test/position = Vector2(356, 71)
graph_offset = Vector2(-90, -77)

[sub_resource type="Animation" id="Animation_f5hk6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_gspp1"]
resource_name = "test"
length = 3.0
markers = [{
"color": Color(1, 1, 1, 1),
"name": &"test_mark",
"time": 1.96667
}]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.96667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(72, -69)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o60ve"]
_data = {
&"RESET": SubResource("Animation_f5hk6"),
&"test": SubResource("Animation_gspp1")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_op7l8")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_op7l8")
anim_player = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_o60ve")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_2ua6k")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="btn_run" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Play
"

[node name="btn_stop" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 56.0
offset_top = 1.0
offset_right = 97.0
offset_bottom = 32.0
text = "Stop
"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="CanvasLayer/Control/btn_run" to="." method="_on_btn_run_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/btn_stop" to="." method="_on_btn_stop_pressed"]
